# coint4

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAW_PROJECT.md  Makefile  Markets_extended.json  Plan.md  README.md  README_BEST_PRACTICE_OPTIMIZATION.md  debug_test.py  example_market_regime_usage.py  plan.md  profile_pair.py  pyproject.toml  requirements.txt  test_bp_optimization.py  test_normalize_with_improvements.py
coint4/: .env.example  .gitignore  CLAUDE.md  Dockerfile  OPTIMIZATION_SYSTEM.md  README.md  calibrate_execution_costs.py  docker-compose.yml  pyproject.toml  pytest.ini  run_wfa_fullcpu.sh
coint4/artifacts/: ARTIFACT_INDEX.json  ARTIFACT_REGISTRY.md  FINAL_REPORT.md  FINAL_REPORT_v0.1.9.md  FINAL_REPORT_v0.2.0.md  MANIFEST.md  V0.1.3_RELEASE_SUMMARY.md  V0.1.4_RELEASE_SUMMARY.md  V0.1.7_RELEASE_SUMMARY.md  V0_2_2_RELEASE_REPORT.md  scheduler_log.jsonl
coint4/bench/: pairs_merged.yaml  pairs_smoke.yaml  symbols_top_100.yaml  wfa.yaml
coint4/configs/: best_config__fast_optimization_smoke_v2__20260113_203310.yaml  best_config__leader_holdout_ssd25000__20260116_211943.yaml  best_config__opt_signals_dynamic_coarse_20260114_v1__20260114_121626.yaml  best_config__opt_signals_dynamic_coarse_20260114_v2__20260114_122737.yaml  best_config__opt_signals_dynamic_coarse_20260114_v4__20260114_135848.yaml  best_config__opt_signals_fixed_coarse_20260114_v2__20260114_115721.yaml  best_config__opt_signals_fixed_coarse_20260114_v3__20260114_120400.yaml  criteria_relaxed.yaml  criteria_relaxed8_nokpss_universe.yaml  criteria_strict.yaml  data_quality_strict.yaml  data_window_clean.yaml  main_2024.yaml  main_2024_optimize_dynamic.yaml  main_2024_optimize_dynamic_zscore_0p7.yaml  main_2024_optimize_dynamic_zscore_0p75_exit0p05_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8.yaml  main_2024_optimize_dynamic_zscore_0p85_exit0p05_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8_cd1.yaml  main_2024_optimize_dynamic_zscore_0p8_cd4.yaml  main_2024_optimize_dynamic_zscore_0p8_corr0p35.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p04_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p05.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p05_hurst0p7.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p05_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p05_pvalue0p45.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p05_pvalue0p5.yaml  main_2024_optimize_dynamic_zscore_0p8_exit0p06_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8_exit_0p1.yaml  main_2024_optimize_dynamic_zscore_0p8_exit_0p15.yaml  main_2024_optimize_dynamic_zscore_0p8_exit_0p1_wfa5.yaml  main_2024_optimize_dynamic_zscore_0p8_exit_0p1_wfa5_kpss0p03.yaml  main_2024_optimize_dynamic_zscore_0p8_filters_strict.yaml  main_2024_optimize_dynamic_zscore_0p8_hurst0p7.yaml  main_2024_optimize_dynamic_zscore_0p8_kpss0p03.yaml  main_2024_optimize_dynamic_zscore_0p8_kpss0p07.yaml  main_2024_optimize_dynamic_zscore_0p8_pvalue0p3.yaml  main_2024_optimize_dynamic_zscore_0p8_pvalue0p4.yaml  main_2024_optimize_dynamic_zscore_0p8_rw120.yaml  main_2024_optimize_dynamic_zscore_0p8_rw72.yaml  (+19 more)
coint4/outputs/: README.md
data/: README.md
(+9353 files in other folders)
